<resources>
    <string name="app_name">c3nav</string>
    <string name="viewc3nav">c3nav</string>
    <string name="share">Share</string>
    <string name="refresh">Refresh</string>
    <string name="shortcut_created">A shortcut has been created</string>
    <string name="shortcut_not_supported">Sorry, your launcher doesn\'t support shortcuts.</string>
    <string name="shortcut_control_panel_short">Control Panel</string>
    <string name="shortcut_control_panel_long">Open c3nav control panel</string>
    <string name="shortcut_current_location_short">Current Position</string>
    <string name="shortcut_current_location_long">Show Current Position</string>
    <string name="shortcut_editor_short">Editor</string>
    <string name="shortcut_editor_long">Open c3nav editor</string>
    <string name="auth_user">Username</string>
    <string name="auth_pw">Password</string>
    <string name="auth_title">Please be patient, c3nav is not yet available for the general public.</string>
    <string name="auth_login">Login</string>
    <string name="auth_error">Invalid username or password</string>
    <string name="url_outside_message">Warning, this link leads to a page outside of c3nav: %1$s</string>
    <string name="url_outside_ok">Continue</string>
    <string name="url_outside_cancel">Cancel</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="map">Map</string>
    <string name="editor">Editor</string>
    <string name="control_panel">Control Panel</string>
    <string name="login">Login</string>
    <string name="your_account">Manage account</string>
    <string name="about_c3nav">About c3nav</string>
    <string name="api">API</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="keep_on_top">Keep c3nav on top</string>
    <string name="keep_on_top_summary">Keep c3nav on top and show it on top of your lock screen</string>
    <string name="keep_screen_on">Stay awake during WiFi measurement</string>
    <string name="keep_screen_on_summary">Stay awake and don\'t lock screen during WiFi measurement</string>
    <string name="use_wifi_bt_locating">Wifi- and Bluetooth-based location</string>
    <string name="use_wifi_bt_locating_summary">Use Wifi- and Bluetooth-based positioning to determine your current location</string>
    <string name="wifi_scan_rate">Wifi scan rate</string>
    <string name="wifi_scan_rate_summary">Wifi scan rate for Wifi-based location</string>
    <string name="developer_mode_enabled">Developer Mode</string>
    <string name="developer_instance_url">Instance URL Override</string>
    <string name="developer_http_user">HTTP Username</string>
    <string name="developer_http_password">HTTP Password</string>
    <string name="current_location_request_failed">Current location can\'t  be determined.</string>
    <string name="wifi_locating_disabled_message">WiFi location is disabled in settings, you have activate it to use this feature.</string>
    <string name="wifi_locating_disabled_ok">Settings</string>
    <string name="wifi_locating_disabled_cancel">Cancel</string>
</resources>
